지도기능 수정

--- a/src/scss/ChargingStation.scss
+++ b/src/scss/ChargingStation.scss
@@ -9,12 +9,13 @@
 
   .title {
     color: #1db954;
+    margin-bottom: 20px;
   }
 
   .searchForm {
     input {
       width: 300px;
-      height: 25px;
+      height: 40px;
       border: solid 1px #dadada;
       padding: 10px 14px;
       margin-bottom: 20px;
